Added a few more repeat options

--- a/SmallLister.Web/Views/Home/Index.cshtml
+++ b/SmallLister.Web/Views/Home/Index.cshtml
@@ -117,6 +117,9 @@
             <option value="triweekly">Every 3 weeks</option>
             <option value="monthly">Every month</option>
             <option value="lastDayMonthly">On the last day of every month</option>
+            <option value="biMonthly">Every 2 months</option>
+            <option value="quarterly">Every 3 months</option>
+            <option value="halfYearly">Every 6 months</option>
             <option value="yearly">Every year</option>
         </select>
     </div>
