Added undo/redo support when moving items

--- a/SmallLister.Web/Views/Home/Index.cshtml
+++ b/SmallLister.Web/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
     </span>
     <h2>@Model.SelectedList.Name</h2>
 
-    <ul class="sml-list" data-baseuri="/api/items">
+    <ul class="sml-list" data-baseuri="/api/v1/items">
         <li class="sml-list">
             @if (Model.Items.Any()) {
             <ul class="sml-list-item">
