--- a/SmallLister.Web/Views/Lists/Index.cshtml
+++ b/SmallLister.Web/Views/Lists/Index.cshtml
@@ -2,7 +2,7 @@
 
 <article>
     @if (Model.Lists.Any()) {
-    <ul class="sml-list" data-baseuri="/api/lists">
+    <ul class="sml-list" data-baseuri="/api/v1/lists">
         <li class="sml-list">
             <ul class="sml-list-item">
                 @foreach (var list in Model.Lists) {
