Added due + overdue count to page title

--- a/SmallLister.Web/Views/Shared/_Layout.cshtml
+++ b/SmallLister.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" sizes="16x16" href="/images/sml.png">
     <link rel="apple-touch-icon" href="/images/sml.png" sizes="32x32" />
-    <title>Small:Lister</title>
+    <title>Small:Lister@(Model.PageTitle)</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="/lib/pickmeup/css/pickmeup.css" />
