--- a/SmallLister.Web/wwwroot/css/smalllister.css
+++ b/SmallLister.Web/wwwroot/css/smalllister.css
@@ -122,6 +122,10 @@ span.sml-toolbar {
     float: right;
 }
 
+span.sml-toolbar form {
+    display: inline;
+}
+
 ul.sml-list,
 ul.sml-list-item {
     margin: 0;
