Added daily digest rss option

--- a/SmallLister.Web/Views/Profile/Index.cshtml
+++ b/SmallLister.Web/Views/Profile/Index.cshtml
@@ -33,6 +33,7 @@
         <select id="sml-feed-type" name="type" class="sml-feed-type">
             <option value="due">Due and Overdue items</option>
             <option value="overdue">Overdue items only</option>
+            <option value="daily">Daily digest</option>
         </select>
     </div>
     <div>
