--- a/SmallLister.Web/wwwroot/css/smalllister.css
+++ b/SmallLister.Web/wwwroot/css/smalllister.css
@@ -49,6 +49,13 @@ header {
     border-bottom: solid #92dd23 2px;
 }
 
+input,
+select,
+button {
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
 nav.navbar-header {
     min-width: 200px;
     -webkit-flex: 0;
