--- a/SmallLister.Web/Views/Home/Login.cshtml
+++ b/SmallLister.Web/Views/Home/Login.cshtml
@@ -5,8 +5,9 @@
 
 <form action="/signin" method="post">
     <p>
-        Sign in using SmallAuth:
-        <button type="submit">Login</button>
+        <label for="email">Email address:</label>
+        <input type="email" id="email" name="email" />
+        <button type="submit">Next...</button>
     </p>
     <input type="hidden" name="returnurl" value="@Model.ReturnUrl" />
     @Html.AntiForgeryToken()
