Added a couple more repeat options: 4 & 6 weeks

--- a/SmallLister.Web/Views/Home/Index.cshtml
+++ b/SmallLister.Web/Views/Home/Index.cshtml
@@ -143,8 +143,10 @@
             <option value="weekly">Every week</option>
             <option value="biweekly">Every 2 weeks</option>
             <option value="triweekly">Every 3 weeks</option>
+            <option value="fourWeekly">Every 4 weeks</option>
             <option value="monthly">Every month</option>
             <option value="lastDayMonthly">On the last day of every month</option>
+            <option value="sixWeekly">Every 6 weeks</option>
             <option value="biMonthly">Every 2 months</option>
             <option value="quarterly">Every 3 months</option>
             <option value="halfYearly">Every 6 months</option>
